--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@ I am an accomplished software developer with a deep expertise in data structures
 
                 </div>
             </div>
-            <div class="coding" id="hover">
+            <div class="coding" id="hover" onclick="window.location.href='https://leetcode.com/u/Ayush007x/'">
                 <div class="div">
                     <img id="leetcode" src="leetcode5.png"></img>
                    
                 </div>
             </div>
-            <div class="coding" id="hover">
+            <div class="coding" id="hover" onclick="window.location.href='https://codeforces.com/profile/Ayushx007'">
                 <div class="div">
                     <img id="codeforces" src="code-forces.png"></img>
                    
@@ -129,7 +129,7 @@ I am an accomplished software developer with a deep expertise in data structures
         <div class="griditem item9">
             <div id="div1"><img src="api.png"></div>
         </div>
-        <div class="griditem item10">
+        <div class="griditem item10" onclick="window.location.href='https://github.com/Ayushxx007'">
             <div id="div1"><img src="github.png"></div>
         </div>
         <div class="griditem item11">
